# app/router/dataTani.js
@@ -6,7 +6,8 @@ const {
   laporanPenyuluh,
   tambahDaftarTani,
   tambahLaporanTani,
-  daftarTani
+  daftarTani,
+  deleteDaftarTani
 } = require('../controllers/dataTani');
 
 router.post('/daftar-tani/add', auth, upload.single('foto') ,tambahDaftarTani);
@@ -14,6 +15,7 @@ router.post('/laporan-tani/add', auth, upload.single('fotoTanaman'), tambahLapor
 router.get('/laporan-petani', auth, laporanPetani);
 router.get('/laporan-penyuluh', auth, laporanPenyuluh);
 router.get('/daftar-tani', auth, daftarTani);
+router.delete('/daftar-tani/:id', auth, deleteDaftarTani);
 
 module.exports = router;
 
